// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ignores annotations inside a code fence 1`] = `
Immutable.List [
  Immutable.Map {
    "description": "This comment contains a code fence
\`\`\`scss
@media () {}
\`\`\`",
    "annotations": Immutable.Map {
      "a": true,
      "b": true,
    },
  },
]
`;

exports[`parses description and annotations (multi) 1`] = `
Immutable.List [
  Immutable.Map {
    "description": "This is a multi-line
description",
    "annotations": Immutable.Map {
      "a": "hello",
      "b": "world",
    },
  },
]
`;

exports[`parses description and annotations 1`] = `
Immutable.List [
  Immutable.Map {
    "description": "Hello",
    "annotations": Immutable.Map {
      "world": true,
    },
  },
]
`;
